feat(sprint-18-api-contract-standardization): sprint 18 api contract standardization
