# apps/api/src/infra/http/controllers/get-payments/get-payments.controller.ts
@@ -48,8 +48,15 @@ export class GetPaymentsController {
 		})
 
 		return {
-			payments: HttpPaymentPresenter.toHTTPList(response.value.payments),
-			totalCount: response.value.totalCount,
+			data: HttpPaymentPresenter.toHTTPList(response.value.payments),
+			meta: {
+				page: query.page ?? 1,
+				pageSize: query.pageSize ?? 20,
+				totalCount: response.value.totalCount,
+				totalPages: Math.ceil(
+					response.value.totalCount / (query.pageSize ?? 20),
+				),
+			},
 		}
 	}
 }
